# optimistic-eth-history-prover

./: .gitmodules  README.md
bot/: Cargo.toml
bot/examples/: bot.rs
bot/src/: main.rs
demo/: package.json
demo/app/: globals.css  index.d.ts  layout.tsx  page.tsx  page_backup.tsx
demo/app/components/: ConnectWallet.tsx  Ranking.tsx  Transaction.tsx
demo/app/lib/abi/: ClaimNFT.json
demo/app/lib/ui/components/: index.ts
demo/app/lib/utils/: alchemy.ts  header.ts  index.ts  trie.ts  utils.ts
l2contracts/: README.md  foundry.toml
l2contracts/broadcast/Deploy.s.sol/421614/: run-1709312053.json  run-1709312145.json  run-1709312807.json  run-1709312849.json  run-1709312886.json  run-1709312918.json
l2contracts/broadcast/UpdateL1Block.s.sol/421614/: run-1708815491.json  run-1708815692.json
l2contracts/script/: Deploy.s.sol
l2contracts/src/: ClaimNFT.sol  ETHDenverBuilder.sol  L1BlockBridger.sol  L1BlockStore.sol  NFT.sol  OGEthereum.sol
l2contracts/src/libs/: MPT.sol  RLPEncode.sol  RLPReader.sol  StorageVerifier.sol  TransactionHasher.sol
l2contracts/test/: ClaimNFT.t.sol  L1BlockStore.t.sol  NFT.t.sol  StorageVerifier.t.sol  TransactionHasher.t.sol
l3contracts/: Cargo.toml
l3contracts/examples/: script.rs
l3contracts/src/: lib.rs  main.rs
utils/create_proof/: main.js  package.json
utils/get_block_header/: go.mod  go.sum  main.go
