[package]
name = "history_prover"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "indexer"]
description = "Ethereum History Prover Contract"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
alloy-rlp = "0.3.4"
mini-alloc = "0.4.2"
stylus-sdk = "0.4.3"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "history_prover"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
